--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ __pycache__
 .ipynb_checkpoints
 models/fast_style_transfer/pretrained/*
 models/style_swap/pretrained/*
-models/mask_style_transfer/pretrained/*
+models/mask_style/pretrained/*
+models/mask_style/logs/*
