--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-bleach==1.5.0
-certifi==2018.1.18
+bleach==1.5.0 cython
 click==6.7
 enum34==1.1.6
 Flask==0.12.2
@@ -23,4 +22,4 @@ tensorflow-gpu==1.4.0
 tensorflow-tensorboard==0.4.0
 Werkzeug==0.14.1
 wincertstore==0.2
-scikit-image==0.14.dev0
+scikit-image Ipython[all] imgaug
